--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             }
         }
     </style>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/dropbox.js/0.7.2/dropbox.min.js"></script>
     <!-- The line below must be kept intact for Sencha Command to build your application -->
     <script id="microloader" type="text/javascript" src="touch/microloader/development.js"></script>
 </head>
